A lot of feature updates to try and get to mvp

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -37,6 +37,8 @@
     "nanoid": "^5.0.0",
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.0",
+    "plaid": "^39.1.0",
+    "twilio": "^5.10.6",
     "zod": "^3.23.0"
   },
   "devDependencies": {
