--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,7 @@
 node_modules
+**/node_modules
 dist
+**/dist
 .env
 .env.local
 .env.*.local
@@ -14,4 +16,10 @@ coverage
 *.test.ts
 *.test.js
 docker-compose.yml
+infrastructure
+cdk.out
+*.md
+docs
+scripts
+*.sql
 
